sampleApp/sampleApp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  namespace: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: "my-sample-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
