sampleApp/sampleApp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
  namespace: sample-app
spec:
  selector:
    app: sample-app
  ports:
    - name: http
      port: 3000
      nodePort: 30081
  type: NodePort
