sampleApp/ingress.yml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: sample-app
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.shasame.test/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://oauth2-proxy.shasame.test/oauth2/start?rd=/redirect/$http_host$escaped_request_uri" #rd=/appName/postgres-operator/path/#new"
spec:
  ingressClassName: nginx
  rules:
  - host: sample-app.shasame.test
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: sample-app-service
              port:
                number: 3000
          path: /
